# CLI4All

./: .gitignore  Cargo.toml  PACKAGING.md  README.md  SPEC.md
.github/workflows/: release.yml
data/: commands.c4dat  commands.c4idx  commands.candidates.json  commands.source.json  commands.yaml  risks.yaml
data/raw/: README.md
data/raw/samples/: gnu_linux_commands.sample.json  macos_zsh_commands.sample.json  powershell_commands.sample.json  windows_cmd_commands.sample.json
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  pty.rs
scripts/: build_macos_release.sh  build_windows_release.ps1  install_macos.sh  install_windows.ps1
src/: cli.rs  data_paths.rs  detector.rs  executor.rs  explainer.rs  fixer.rs  lib.rs  main.rs  output.rs  platform.rs  rules.rs  safety.rs  shell.rs  translator.rs
src/store/: bplus_tree.rs  c4db_builder.rs  c4db_store.rs  command_store.rs  formats.rs  mod.rs  normalize.rs
tests/: detector_tests.rs  safety_tests.rs  shell_tests.rs  store_tests.rs  translator_tests.rs
tools/collectors/: collect_gnu_linux.sh  collect_macos_zsh.sh  collect_powershell.ps1  collect_windows_cmd.ps1  generate_command_candidates.py  windows_cmd_seed.txt
