[package]
name = "cli4all"
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
name = "cli4all"
maintainer = "CLI4ALL"
copyright = "2026, CLI4ALL"
extended-description = "Deterministic cross-platform command helper for Ubuntu users."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/cli4all", "usr/bin/cli4all", "755"],
    ["README.md", "usr/share/doc/cli4all/README.md", "644"],
    ["data/commands.yaml", "usr/share/cli4all/data/commands.yaml", "644"],
    ["data/risks.yaml", "usr/share/cli4all/data/risks.yaml", "644"],
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
