[package]
name = "cli4all-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli4all_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
cli4all = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2" }
